Fix overflow and scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   padding: 15px;
   color: rgb(236, 236, 236);
 }
+.bottomMargin{
+  margin: 0;
+}
 .footer {
   background-color: #cce7ff;
   font-size: 16px;
@@ -15,7 +18,6 @@
 }
 .bodyStyle {
   font-size: 20px;
-  margin: 10px;
 }
 
 .searchBox {
@@ -55,7 +57,7 @@ html, body, .container{
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+
 }
 .container{
   background-color: #007ced;
